<resources>
    <string name="app_name">Working With Text</string>
    <string name="text_alignment">Align</string>
    <string name="center_text">Center</string>
    <string name="left_text">Left</string>
    <string name="right_text">Right</string>
    <string name="enter_text_here">Enter text here.</string>
    <string name="text_size">Text size</string>
    <string name="text_color">Text color</string>
    <string name="change_color">Change Color</string>
    <string name="text_formatting">Formatting</string>
    <string name="bold">Bold</string>
    <string name="underline">Underline</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="text_fill">Fill</string>
    <string name="stroke_text">Stroke</string>
    <string name="fill_and_stroke_text"><![CDATA[Fill & Stroke]]></string>
    <string name="fill_text">Fill</string>
    <string name="monospace_text">Monospace</string>
    <string name="sans_serif_text">Sans Serif</string>
    <string name="serif_text">Serif</string>
    <string name="text_spacing">Spacing</string>
    <string name="text_fonts">Fonts</string>
</resources>